<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

     <TextClock
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="number"/>


    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/string3"
        android:textSize="20sp"
        android:showText="true"
        android:textOff="@string/string8"
        android:textOn="@string/string7"
        android:checked="true"/>


    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/string4"
        android:textSize="20sp"
        android:showText="true"
        android:textOff="@string/string8"
        android:textOn="@string/string7"
        android:checked="true"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/string6"
        android:textSize="20sp"
        android:checked="true"
        />

    <ToggleButton
        android:id="@+id/offButton"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:checked="true"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="8dp"
        android:text="@string/string1"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:text=" "
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:text=" "
        android:textSize="20sp"
        />




</LinearLayout>